<resources>
    <string name="app_name">Mini Spellbook</string>

    <string name="string_yes">Yes</string>
    <string name="string_not">No</string>
    <string name="callback_error_no_internet_connection">Unable to access the API.\nPlease, check your internet connection.</string>
    <string name="callback_error_nothing_found">Nothing was found.\nTry searching for a different Spell</string>

<!--    Splash -->
    <string name="splash_icon_description">A open book with magic getting out of it</string>

<!--    MainActivity -->
    <string name="button_to_favorite_spells">Favorite Spells</string>
    <string name="button_to_search_spell">Search Spell</string>
    <string name="language_warning">Hello! Just want to warn you that, currently, there are no translations to this app.\nThe API in use is fully in english, sorry.</string>

<!--    FavoriteSpells -->
    <string name="favorite_spells_textview_title">Your favorites spells</string>
    <string name="favorite_spells_textview_empty">You have no favorite spells</string>

<!--    SearchSpellActivity -->
    <string name="error_select">Please, select a valid class!</string>
    <string name="error_type_spell_name">Please, type a spell name!</string>
    <string name="type_spell_name">Type the spell name</string>
    <string name="button_search">Search</string>

<!--    SearchSpellFragments -->
    <string name="fragment_title_search_spell_by_class">Search Spell by Class</string>
    <string name="fragment_title_search_spell_individually">Search Spell individually</string>
    <string name="fragment_textview_searching">Searching Spells… Please, wait</string>

    <string name="fragment_spells_by_class_textview_list_title">Class: \"%1$s\" (%2$d total spells)</string>

    <string name="fragment_search_spell_list_title">Searched for: \"%1$s\" (%2$d results)</string>

<!--    SpellDataActivity -->
    <string name="spell_data_textview_getting_data">Getting Spell data… Please, wait</string>
    <string name="spell_data_textview_title">%1$s\'s data</string>
    <string name="spell_data_textview_spell_name_label">Name:</string>
    <string name="spell_data_textview_spell_level_label">Level:</string>
    <string name="spell_data_textview_spell_class_label">Class(es):</string>
    <string name="spell_data_textview_spell_component_label">Component(s):</string>
    <string name="spell_data_textview_spell_concentration_label">Concentration:</string>
    <string name="spell_data_textview_spell_duration_label">Duration:</string>
    <string name="spell_data_textview_spell_range_label">Range:</string>
    <string name="spell_data_textview_spell_ritual_label">Ritual:</string>
    <string name="spell_data_textview_spell_material_label">Material:</string>
    <string name="spell_data_textview_spell_casting_time_label">Casting Time:</string>
    <string name="spell_data_textview_spell_school_label">School:</string>
    <string name="spell_data_textview_spell_description_label">Description:</string>
    <string name="spell_data_textview_spell_level_zero">Cantrip (0)</string>
    <string name="spell_data_textview_spell_duration_concentration">Concentration</string>

<!--    RowSpell -->
    <string name="row_spell_textview_details">Touch for details</string>

<!--    Toast -->
    <string name="toast_spell_added_to_favorites">Spell added to favorites</string>
    <string name="toast_spell_removed_from_favorites">Spell removed from favorites</string>

<!--    Alert -->
    <string name="alert_title_search_spell_by_class">Invalid Class selected</string>
    <string name="alert_title_search_spell_individually">Invalid Spell name</string>
    <string name="alert_message_search_spell_by_class">Please, select a valid Class.</string>
    <string name="alert_message_search_spell_individually">Spell name can\'t be empty.\nPlease, type something.</string>
    <string name="alert_neutral_button">OK</string>


    <string-array name="select_classes">
        <item>Select a Class</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
</resources>