<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue100"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainButtonToFavoriteSpells"
        style="@style/main_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:text="@string/button_to_favorite_spells"
        app:layout_constraintBottom_toTopOf="@+id/mainButtonToSearchSpell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainButtonToSearchSpell"
        style="@style/main_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:text="@string/button_to_search_spell"
        app:layout_constraintBottom_toTopOf="@+id/mainTextViewWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonToFavoriteSpells" />

    <TextView
        android:id="@+id/mainTextViewWarning"
        style="@style/main_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/language_warning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>