<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentSearchSpell"
    android:background="@color/blue100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/fragmentSearchSpellEditTextSpellName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/edit_text_fragment"
            android:hint="@string/type_spell_name"
            android:maxLength="30"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fragmentSearchSpellButtonToSpellData"
            style="@style/search_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="@string/button_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellEditTextSpellName" />

        <ProgressBar
            android:id="@+id/fragmentSearchSpellProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellButtonToSpellData" />

        <TextView
            android:id="@+id/fragmentSearchSpellTextViewSearching"
            style="@style/important_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_textview_searching"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellProgressBar" />

        <TextView
            android:id="@+id/fragmentSearchSpellTextViewError"
            style="@style/important_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/fragmentSearchSpellProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragmentSearchSpellProgressBar" />

        <TextView
            android:id="@+id/fragmentSearchSpellTextViewListTitle"
            style="@style/important_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_search_spell_list_title"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellButtonToSpellData" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragmentSearchSpellRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellTextViewListTitle"
            tools:listitem="@layout/row_spell" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>