<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSearchSpellByClass"
    android:background="@color/blue100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/fragmentSearchSpellByClassSpinnerClasses"
            style="@style/spinner_classes"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:entries="@array/select_classes"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fragmentSearchSpellByClassButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            style="@style/search_buttons"
            android:text="@string/button_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellByClassSpinnerClasses" />

        <ProgressBar
            android:id="@+id/fragmentSearchSpellByClassProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellByClassButtonSearch" />

        <TextView
            android:id="@+id/fragmentSearchSpellByClassTextViewSearching"
            style="@style/important_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_textview_searching"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellByClassProgressBar" />

        <TextView
            android:id="@+id/fragmentSearchSpellByClassTextViewError"
            style="@style/important_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellByClassButtonSearch" />

        <TextView
            android:id="@+id/fragmentSearchSpellByClassTextViewListTitle"
            style="@style/important_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_spells_by_class_textview_list_title"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellByClassButtonSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragmentSearchSpellByClassRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSearchSpellByClassTextViewListTitle"
            tools:listitem="@layout/row_spell" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>